--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
 			<nav class="nav">
 				<ul class="nav__list">
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">About</a>
+						<a href="about.html" class="nav__link">About</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Location</a>
+						<a href="faq.html" class="nav__link">FAQ</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Careers</a>
+						<a href="contacts.html" class="nav__link">Contacts</a>
 					</li>
 				</ul>
 			</nav>
@@ -152,11 +152,11 @@
 						</div>
 						<div class="faqs__block-select">
 							<button class="faqs__button faqs__button--fifth">How about the rules & regulations?</button>
-							<p class="about__inner-info">The main purpose of using the scooters to get your location without wasting your money and without pulling the air by using a car. You are Not allowed to get any available scoot for delivering Pizzas. For futher information please click the <a href="#">link</a></p>
+							<p class="about__inner-info">The main purpose of using the scooters to get your location without wasting your money and without pulling the air by using a car. You are Not allowed to get any available scoot for delivering Pizzas. For futher information please click the <a href="faq.html">link</a></p>
 						</div>
 						<div class="faqs__block-select">
 							<button class="faqs__button faqs__button--sixth">What if I damage my Scoot?</button>
-							<p class="about__inner-info">If you damage the scooter, it is advised to contact with us immediately.</p>
+							<p class="about__inner-info">If you damage the scooter, it is advised to contact with us immediately. You can approach us from 8am until 10pm, please call +998901234567</p>
 						</div>
 					</div>
 				</div>
@@ -170,12 +170,12 @@
 				<div class="registration__container">
 					<h2 class="registration__title">Sign up and Scoot off today</h2>
 					<div class="registration__store">
-						<a class="app-store" href="#">
+						<a class="app-store" href="https://www.apple.com/ru/app-store/">
 							<svg class="app-store-icon" width="159" height="56">
 								<use xlink:href="#icon-app-store"></use>
 							</svg>
 						</a>
-						<a class="play-market" href="#">
+						<a class="play-market" href="https://play.google.com/store">
 							<svg width="182" height="56">
 								<use xlink:href="#icon-play-market"></use>
 							</svg>
@@ -200,13 +200,13 @@
 			<nav class="nav">
 				<ul class="nav__list">
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">About</a>
+						<a href="about.html" class="nav__link">About</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Location</a>
+						<a href="faq.html" class="nav__link">FAQ</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Careers</a>
+						<a href="contacts.html" class="nav__link">Contacts</a>
 					</li>
 				</ul>
 			</nav>
@@ -214,21 +214,21 @@
 			<nav class="social-network">
 				<ul class="social-network__list">
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.facebook.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.twitter.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.instagram.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-instagram"></use>
 							</svg>
