--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<a href="./about.html" class="nav__link">About</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Location</a>
+						<a href="faq.html" class="nav__link">FAQ</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Careers</a>
+						<a href="contacts.html" class="nav__link">Contacts</a>
 					</li>
 				</ul>
 			</nav>
@@ -145,12 +145,12 @@
 				<div class="registration__container">
 					<h2 class="registration__title">Sign up and Scoot off today</h2>
 					<div class="registration__store">
-						<a class="app-store" href="#">
+						<a class="app-store" href="https://www.apple.com/ru/app-store/">
 							<svg class="app-store-icon" width="159" height="56">
 								<use xlink:href="#icon-app-store"></use>
 							</svg>
 						</a>
-						<a class="play-market" href="#">
+						<a class="play-market" href="https://play.google.com/store">
 							<svg width="182" height="56">
 								<use xlink:href="#icon-play-market"></use>
 							</svg>
@@ -178,10 +178,10 @@
 						<a href="./about.html" class="nav__link">About</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Location</a>
+						<a href="faq.html" class="nav__link">FAQ</a>
 					</li>
 					<li class="nav__iteam">
-						<a href="#" class="nav__link">Careers</a>
+						<a href="contacts.html" class="nav__link">Contacts</a>
 					</li>
 				</ul>
 			</nav>
@@ -189,21 +189,21 @@
 			<nav class="social-network">
 				<ul class="social-network__list">
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.facebook.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-facebook"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.twitter.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-twitter"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="social-network__iteam">
-						<a href="#" target="_blank" class="social-network__link">
+						<a href="https://www.instagram.com/" target="_blank" class="social-network__link">
 							<svg class="icon social-network__img">
 								<use xlink:href="#icon-instagram"></use>
 							</svg>
